version/0.70/_sources/autoapi/pyedb/generic/design_types/index.rst.txt






The ``pyedb.generic.design_types`` library
==========================================

.. py:module:: pyedb.generic.design_types


Summary
-------








.. py:currentmodule:: design_types
.. tab-set::







    .. tab-item:: Functions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~Edb`
            - Provides the EDB application interface.


          * - :py:obj:`~Siwave`
            - Provides the SIwave application interface.



    .. tab-item:: Attributes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~app_map`
            - 






















Module detail
-------------

.. py:function:: Edb(*, grpc: Literal[True], **kwargs) -> pyedb.grpc.edb.Edb
                 Edb(*, grpc: Literal[False] = False, **kwargs) -> pyedb.dotnet.edb.Edb
                 Edb(*, grpc: bool, **kwargs) -> pyedb.grpc.edb.Edb | pyedb.dotnet.edb.Edb

   
   Provides the EDB application interface.

   This module inherits all objects that belong to EDB.

   :Parameters:

       **edbpath** : :class:`python:str`, :obj:`optional`
           Full path to the ``aedb`` folder. The variable can also contain the path to a layout to import.
           Allowed formats are BRD, XML (IPC2581), GDS, and DXF. The default is ``None``.
           For GDS import, the Ansys control file (also XML) should have the same name as the GDS file.
           Only the file extension differs.

       **cellname** : :class:`python:str`, :obj:`optional`
           Name of the cell to select. The default is ``None``.

       **isreadonly** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Whether to open EBD in read-only mode when it is owned by HFSS 3D Layout.
           The default is ``False``.

       **version** : :class:`python:str`, :obj:`optional`
           Version of EDB to use. The default is ``None``.

       **isaedtowned** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Whether to launch EDB from HFSS 3D Layout. The default is ``False``.

       **oproject** : :obj:`Any`, :obj:`optional`
           Reference to the AEDT project object.

       **student_version** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Whether to open the AEDT student version. The default is ``False.``

       **use_ppe** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Whether to use PPE license. The default is ``False``.

       **map_file** : :class:`python:str`, :obj:`optional`
           Layer MAP file. The default is ``None``.

       **technology_file** : :class:`python:str`, :obj:`optional`
           Full path to technology file to be converted to xml before importing or xml. Supported by GDS format only.

       **grpc** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Whether to enable gRPC. Default value is ``False``.

       **layer_filter: str,optional**
           Layer filter .txt file.

       **control_file** : :class:`python:str`, :obj:`optional`
           Path to the XML file. The default is ``None``, in which case an attempt is made to find
           the XML file in the same directory as the board file. To succeed, the XML file and board file
           must have the same name. Only the extension differs.



   :Returns:

       :class:`Edb <pyedb.dotnet.edb.Edb>` or :class:`Edb <pyedb.grpc.edb.Edb>`
           ..










   .. rubric:: Examples

   1. Creating and Opening an EDB Database

   >>> from pyedb import Edb

   # Create a new EDB instance
   >>> edb = Edb()

   # Open an existing AEDB database
   >>> edb = Edb(edbpath="my_project.aedb")

   # Import a board file (BRD, XML, GDS, etc.)
   >>> edb = Edb(edbpath="my_board.brd")

   2. Cutout Operation

   # Simple cutout with signal and reference nets
   >>> edb.cutout(
   >>>    signal_list=["PCIe", "USB"],
   >>>    reference_list=["GND"]
   >>> )

   # Advanced cutout with custom parameters
   >>> edb.cutout(
   >>>    signal_list=["DDR"],
   >>>    reference_list=["GND"],
   >>>    extent_type="ConvexHull",
   >>>    expansion_size=0.002,
   >>>    use_round_corner=True,
   >>>    output_aedb_path="cutout.aedb",
   >>>    remove_single_pin_components=True
   >>> )

   3. Exporting Designs

   # Export to IPC2581 format
   >>> edb.export_to_ipc2581("output.xml", units="millimeter")

   # Export to HFSS project
   >>> edb.export_hfss("hfss_output")

   # Export to Q3D project
   >>> edb.export_q3d("q3d_output", net_list=["PowerNet"])

   # Export to Maxwell project
   >>> edb.export_maxwell("maxwell_output")

   4. Simulation Setup

   # Create SIwave SYZ setup
   >>> syz_setup = edb.create_siwave_syz_setup(
   >>>     name="GHz_Setup",
   >>>     start_freq="1GHz",
   >>>     stop_freq="10GHz"
   >>> )

   # Create SIwave DC setup
   >>> dc_setup = edb.create_siwave_dc_setup(name="DC_Analysis", use_dc_point=True)

   # Solve with SIwave
   >>> edb.solve_siwave()

   5. Database Management

   # Save database
   >>> edb.save()

   # Save as new database
   >>> edb.save_as("new_project.aedb")

   # Close database
   >>> edb.close()

   6. Stackup and Material Operations

   # Access stackup layers
   >>> for layer_name, layer in edb.stackup.layers.items():
   >>>     print(f"Layer: {layer_name}, Thickness: {layer.thickness}")

   # Add new material
   >>> edb.materials.add_material("MyMaterial", permittivity=4.3, loss_tangent=0.02)

   # Change layer thickness
   >>> edb.stackup["TopLayer"].thickness = "0.035mm"

   7. Port Creation

   # Create wave port between two pins
   >>> wave_port = edb.excitation_manager.create_port(
   >>>     positive_terminal=pin1,
   >>>     negative_terminal=pin2,
   >>>     port_type="Wave"
   >>> )

   # Create lumped port
   >>> lumped_port = edb.excitation_manager.create_port(
   >>>     positive_terminal=via_terminal,
   >>>     port_type="Lumped"
   >>> )

   8. Component Management

   # Delete components by type
   >>> edb.components.delete_component(["R1", "C2"])

   # Set component properties
   >>> edb.components["U1"].set_property("Value", "10nH")

   9. Parametrization

   # Auto-parametrize design elements
   >>> params = edb.auto_parametrize_design(
   >>>     traces=True,
   >>>     pads=True,
   >>>     antipads=True,
   >>>     use_relative_variables=True
   >>> )
   >>> print("Created parameters:", params)

   10. Design Statistics

   # Get layout statistics with area calculation
   >>> stats = edb.get_statistics(compute_area=True)
   >>> print(f"Total nets: {stats.net_count}")
   >>> print(f"Total components: {stats.component_count}")

   11. Layout Validation

   # Run DRC check
   >>> drc_errors = edb.layout_validation.run_drc()
   >>> print(f"Found {len(drc_errors)} DRC violations")

   12. Differential Pairs

   # Create differential pair
   >>> edb.differential_pairs.create(positive_net="USB_P", negative_net="USB_N", name="USB_DP")

   13. Workflow Automation

   # Define and run workflow
   >>> workflow = edb.workflow
   >>> workflow.add_task("Import", file_path="input.brd")
   >>> workflow.add_task("Cutout", signal_nets=["PCIe"])
   >>> workflow.add_task("Export", format="IPC2581")
   >>> workflow.run()

   ..
       !! processed by numpydoc !!

.. py:function:: Siwave(specified_version=None) -> Siwave

   
   Provides the SIwave application interface.


   :Parameters:

       **specified_version** : :class:`python:str`, :obj:`optional`
           Version of SIwave to use. The default is ``None``.
           If not specified, the latest installed version will be used.














   ..
       !! processed by numpydoc !!

.. py:data:: app_map



